hard-gists/4547295/run.log
=== Docker Run Log for 4547295 ===
Started at: Mi 29. Okt 14:43:24 CET 2025

[2025-10-29 14:43:26] START: Running container for 4547295
[2025-10-29 14:43:27] SUCCESS: Container 7aa6a382b167ef928e676550d3e1987ff1347dc4323498e38b7464f54f2b3aee started for 4547295
=== Container logs for 4547295 ===
  File "/snippet.py", line 183
    except (OSError, IOError), e:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4547295 ===
[2025-10-29 14:43:29] INFO: Container 7aa6a382b167ef928e676550d3e1987ff1347dc4323498e38b7464f54f2b3aee has stopped
